// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 1`] = `
.c0 .title {
  font-size: 12px;
}

.c0 .file-type-icon span {
  width: 14px !important;
  height: 14px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 2`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 3`] = `
.c0 .overlay {
  padding: 24px;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-size {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 18px !important;
  height: 18px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should apply breakpoint rules bassed on breakpointSize 4`] = `
.c0 {
  border-radius: 2px;
}

.c0 .title {
  font-size: 16px;
}

.c0 .file-size {
  font-size: 14px;
}

.c0 .wrapper,
.c0 .img-wrapper {
  border-radius: 2px;
}

.c0 .overlay {
  padding: 24px;
}

.c0 .file-type-icon span {
  width: 18px !important;
  height: 18px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with default properties 1`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with different appeareances 1`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with different appeareances 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with different appeareances 3`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with different appeareances 4`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with different appeareances 5`] = `
.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 1`] = `
.c0 {
  height: 300px;
  max-height: 100%;
  width: 400px;
  max-width: 100%;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  width: 400px;
  max-width: 100%;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper File should render properly with passed dimensions 3`] = `
.c0 {
  height: 300px;
  max-height: 100%;
  width: 400px;
  max-width: 100%;
}

.c0 .title {
  font-size: 14px;
}

.c0 .file-type-icon span {
  width: 16px !important;
  height: 16px !important;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with default properties 1`] = `
.c0 {
  min-width: 200px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with different appeareances 1`] = `
.c0 {
  min-width: 200px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with different appeareances 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with different appeareances 3`] = `
.c0 {
  min-width: 144px;
  max-width: 480px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with different appeareances 4`] = `
.c0 {
  min-width: 272px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with different appeareances 5`] = `
.c0 {
  min-width: 400px;
  max-width: 400px;
  height: 125px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with passed dimensions 1`] = `
.c0 {
  min-width: 200px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with passed dimensions 2`] = `
.c0 {
  display: inline-block;
  min-width: 200px;
  width: 400px;
  max-width: 100%;
  height: 42px;
}

<div
  className="c0"
/>
`;

exports[`Root Wrapper Link should render properly with passed dimensions 3`] = `
.c0 {
  min-width: 200px;
  max-width: 400px;
  position: relative;
}

<div
  className="c0"
/>
`;
